--- a/sets/02-deployment-set.yaml
+++ b/sets/02-deployment-set.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: nginx-deployment
-  lables:
+  labels:
     app: nginx
     demo: deployment
 spec:
@@ -13,7 +13,7 @@ spec:
       demo: deployment
   template:
     metadata:
-      lables:
+      labels:
         app: nginx
         demo: deployment
     spec:
