--- a/sets/02-deployment-set.yaml
+++ b/sets/02-deployment-set.yaml
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: nginx
+        image: nginx:stable-perl
         ports:
         - containerPort: 80
                 
